Fix Java 11 compile warnings
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/branches/strategy-loading@24932 4235af6a-31f9-0310-9ad3-ecf6348f2534